[metadata]
name = databackend
description = Abstract data dispatch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/machow/databackend
author = Michael Chow
author_email = mc_al_github@fastmail.com
license = MIT
keywords = data
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:
include_package_data = True
zipsafe = False

python_requires = >=3.7

[options.extras_require]
dev =
    pip-tools
    pytest

[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max-line-length = 90
ignore =
    # line too long
    E501
    # line before binary operator
    W503
